# natrium

./: .dockerignore  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  ac9-hanoi.c0  ac9-hanoi.o0  compile-pipeline.html  ebnf.html  index.html  judge.html  judge.toml  navm.html  preface.html  print.html  readme.md  ref-impl.html  reference.html  requirement.html  searchindex.js  searchindex.json  todo.html
.cargo/: config
.github/workflows/: docs_deploy.yml  mdbook.yml  pages.yml  r0vm_test.yml  release.yml  test.yml
book/: judge.html  reference.html
book/c0/: expr.html  stmt.html  token.html
book/navm/: index.html
c0/: c0.html  expr.html  extended-c0.html  func.html  method_notes.html  notes.html  stdlib.html  stmt.html  token.html  ty.html
crates/codegen-r0vm/: Cargo.toml
crates/codegen-r0vm/src/: err.rs  lib.rs  scope.rs  ty.rs
crates/judge/: Cargo.toml
crates/r0codegen/: Cargo.toml
crates/r0codegen/src/: code.rs  err.rs  lib.rs  scope.rs  ty.rs
crates/r0codegen/src/generator/: mod.rs  util.rs
crates/r0vm/: Cargo.toml  readme.md
crates/r0vm/src/: error.rs  lib.rs  opcodes.rs  s0.rs  util.rs  vm.rs
crates/r0vm/src/s0/: io.rs  mod.rs
crates/r0vm/src/tests/: mod.rs  ser.rs
crates/r0vm/src/vm/: mem.rs  mod.rs  ops.rs  util.rs
crates/syntax/: Cargo.toml  readme.md
crates/syntax/src/: ast.rs  lexer.rs  lib.rs  scope.rs  span.rs  token.rs  ty.rs  util.rs
crates/syntax/src/lexer/: err.rs  mod.rs
crates/syntax/src/parser/: err.rs  mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  compile-pipeline.md  ebnf.md  judge.md  nanors.md  navm.md  preface.md  r0.md  r0vm.md  ref-impl.md  reference.md  requirement.md  scoring.md  todo.md
docs/src/c0/: c0.md  expr.md  extended-c0.md  func.md  method_notes.md  notes.md  stdlib.md  stmt.md  token.md  ty.md
docs/src/experiments/: ex1.md  notes.md  preface.md
docs/src/navm/: example.md  faq.md  index.md  instruction.md  readme.md
docs/src/r0/: expr.md  extended-c0.md  ident.md  literal.md  method_notes.md  notes.md  r0.md  stmt.md  token.md
docs/src/theme/: book.js  highlight.css  index.hbs
docs/src/theme/css/: variables.css
docs/theme/: book.js  index.hbs
docs/theme/css/: variables.css
navm/: example.html  faq.html  index.html  instruction.html
playground/: index.html  index.js
src/: lib.rs  main.rs  test.rs  util.rs
src/llvm/: mod.rs
theme/css/: additional.css
web/: .gitignore  Cargo.toml  package.json  tsconfig.json  webpack.config.js  webpack.prod.js
web/js/: index.js  index.styl  index.tsx  main.tsx
web/src/: lib.rs
