[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "natrium"
version = "0.1.0"

[dependencies]
"line-span" = "0.1.2"
"logos" = "0.11.4"
"r0codegen" = {path = "crates/r0codegen"}
"r0syntax" = {path = "crates/syntax"}
"r0vm" = {path = "crates/r0vm", default-features = false}

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm9-0", optional = true }
[features]
default = ["vm"]
# llvm9 = ["inkwell"]
vm = ["r0vm/vm"]

[workspace]
members = ["crates/*"]
