[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "natrium"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "r0vm"
required-features = ["cli"]

[[bin]]
name = "natrium"
required-features = ["cli"]

[profile.release]
lto = true

[dependencies]
"clap" = {version = "3.0.0-beta.2", optional = true}
"crossterm" = {version = "0.18", optional = true}
"line-span" = "0.1.2"
"logos" = "0.11.4"
"r0codegen" = {path = "crates/r0codegen"}
"r0syntax" = {path = "crates/syntax"}
"r0vm" = {path = "crates/r0vm", default-features = false}

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm9-0", optional = true }
[features]
cli = ["clap", "crossterm"]
default = ["vm"]
vm = ["r0vm/vm"]

[workspace]
members = ["crates/*", "web"]
