[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "natrium"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "navm"
path = "src/bin/r0vm.rs"
required-features = ["cli"]

[[bin]]
name = "natrium"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true

[dependencies]
bimap = "0.5.3"
"clap" = {version = "3.0.0-beta.2", optional = true}
"crossterm" = {version = "0.18", optional = true}
itoa = "*"
lexpr = "0.2.5"
"line-span" = "0.1.2"
"logos" = "0.11.4"
"r0codegen" = {path = "crates/r0codegen"}
"r0syntax" = {path = "crates/syntax"}
"r0vm" = {path = "crates/r0vm", default-features = false}
"rustyline" = {version = "7.0.0", optional = true}
serde = "1.0"
serde-lexpr = "0.1.1"
shell-words = {version = "1.0.0", optional = true}
unicode-width = "0.1.8"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm9-0", optional = true }

[features]
cli = ["clap", "crossterm", "r0vm/serde", "rustyline", "shell-words"]
default = ["vm", "cli"]
vm = ["r0vm/vm"]

[workspace]
members = ["crates/r0codegen", "crates/r0vm", "crates/syntax", "web"]
