# You must change these to your own details.
[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Webpack project!"
edition = "2018"
name = "natrium-web"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
bytes = "0.6"
console_error_panic_hook = "0.1.5"
js-sys = "0.3.22"
"line-span" = "0.1.2"
"logos" = "0.11.4"
natrium = {path = "../", default-features = false}
"r0codegen" = {path = "../crates/r0codegen"}
"r0syntax" = {path = "../crates/syntax"}
"r0vm" = {path = "../crates/r0vm"}
wasm-bindgen = "0.2.68"
wee_alloc = {version = "0.4.2", optional = true}

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
features = ["console"]
version = "0.3.22"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
# [target."cfg(debug_assertions)".dependencies]

# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
wasm-bindgen-test = "0.2.45"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
