[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "r0codegen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"bit-set" = "0.5.2"
indexmap = "1.6.0"
once_cell = "1.4.1"
r0syntax = {path = "../syntax"}
r0vm = {path = "../r0vm", default_features = false}
smol_str = "0.1.17"
