[package]
name = "r0vm"
version = "0.1.0"
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
"failure" = "^0.1.7"
"static_assertions" = "1.1.0"
"text_io" = "0.1.8"

[features]
