[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "r0vm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
"failure" = "^0.1.7"
"serde" = {version = "1.0", optional = true, features = ["derive"]}
smol_str = "0.1.17"
"static_assertions" = "1.1.0"
"text_io" = "0.1.8"

[dev-dependencies]
"ntest" = "0.7.1"

[features]
default = ["vm", "serde"]
vm = []

[package.metadata]
test-timeout = 10
