[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "r0syntax"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
indexmap = "1.6.0"
logos = "0.11.4"
ryu = "1.0"
serde = {version = "1.0", optional = true, features = ["derive", "rc"]}
smol_str = "0.1.17"
unescape = "0.1.0"

[features]
serde_impl = ["serde", "smol_str/serde"]
